fixed builder on mobile

--- a/frontend/src/sass/app.scss
+++ b/frontend/src/sass/app.scss
@@ -299,16 +299,17 @@ html, body, #root {
   }
   .pane {
     flex: 1;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-bottom: 0px;
+    margin-left: -15px;
+    margin-right: -15px;
+    margin-top:-30px;
     position:relative;
+    top:32px;
     background-color: $colorBack;
     cursor:move;
-    .questions {
+    .react-transform-element {
       width:calc(100vw - 30px);
       height:calc(100vh - 97px);
-      height:calc(var(--vh, 1vh) * 100 - 97px);
+      height:calc(var(--vh, 1vh) * 100 - 82px);
       .question {
         width:400px;
         position:absolute;
@@ -521,5 +522,35 @@ html, body, #root {
         background-color:transparent;
       }
     }
+  }
+}
+.block {
+  display:block;
+}
+.handle1Outer {
+  position:relative;
+  width: calc(100% - 30px);
+  height: 38px;
+  margin-left: -8px !important;
+  margin-top: -8px !important;
+  border:3px dashed #ccc;
+  background-color:#f3f3f3;
+  border-top-left-radius:5px;
+  border-bottom-right-radius:5px;
+  :before {
+    content: "Drag Me";
+    text-align:center;
+    display:block;
+    padding-top:5px;
+    color:#aaa;
+    font-weight:bold;
+    font-size:16px;
+  }
+  .handle1 {
+    position:absolute;
+    left:0px;
+    top:0px;
+    width:100%;
+    height:100%;
   }
 }
